// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2EDataAttribute snapshots should render E2EDataAttribute 1`] = `
<DocumentFragment>
  <span
    data-test-test1=""
  >
    child
  </span>
</DocumentFragment>
`;

exports[`E2EDataAttribute snapshots should render with multiple types and values 1`] = `
<DocumentFragment>
  <span
    data-test-test1="test-1"
    data-test-test2="test-2"
  >
    child
  </span>
</DocumentFragment>
`;

exports[`E2EDataAttribute snapshots should render with value 1`] = `
<DocumentFragment>
  <span
    data-test-test1="test-1"
  >
    child
  </span>
</DocumentFragment>
`;
